# fast-factorial

./: .gitignore  Cargo.toml  README.md  eg.jl
src/: lib.rs  sieve.rs
